# mockiato

./: .editorconfig  .mailmap  .travis.yml  Cargo.toml  Jenkinsfile  changelog.md  license.txt  readme.md  rust-toolchain  rustfmt.toml
crates/mockiato-codegen/: Cargo.toml  build.rs
crates/mockiato-codegen/src/: code_generator.rs  code_generator_impl.rs  constant.rs  controller.rs  controller_impl.rs  diagnostic.rs  emit_diagnostics.rs  generate.rs  lib.rs  mockable.rs  parse.rs  result.rs  syn_ext.rs
crates/mockiato-codegen/src/code_generator/: arguments_matcher.rs  code_generator_impl.rs  debug_impl.rs  mock_struct.rs  visibility.rs
crates/mockiato-codegen/src/code_generator_impl/: arguments_matcher.rs  bound_lifetimes.rs  debug_impl.rs  mock_struct.rs  util.rs
crates/mockiato-codegen/src/diagnostic/: builder.rs
crates/mockiato-codegen/src/emit_diagnostics/: nightly.rs  stable.rs
crates/mockiato-codegen/src/generate/: arguments.rs  arguments_matcher.rs  constant.rs  debug_impl.rs  drop_impl.rs  generics.rs  lifetime_rewriter.rs  mock_struct.rs  trait_impl.rs  util.rs  visibility.rs
crates/mockiato-codegen/src/parse/: method_decl.rs  method_decl_parser.rs  method_inputs.rs  method_inputs_parser.rs  mockable_attr.rs  mockable_attr_parser.rs  name_attr.rs  static_attr.rs  trait_decl.rs  trait_decl_parser.rs
crates/mockiato-codegen/src/parse/mockable_attr_parser/: mockable_attr_parser_impl.rs
crates/mockiato-compiletest/: Cargo.toml
crates/mockiato-compiletest/tests/: compiletest.rs
crates/mockiato-compiletest/tests/ui/: const_method.rs  const_method.stderr  ignored_arguments.rs  ignored_arguments.stderr  malformed_mockable_attr.rs  malformed_mockable_attr.stderr  malformed_name_attr.stderr  malformed_remote_param_in_mockable_attr.rs  malformed_remote_param_in_mockable_attr.stderr  malformed_static_attr.rs  malformed_static_attr.stderr  method_with_generic_type_argument.rs  method_with_generic_type_argument.stderr  method_without_self.rs  method_without_self.stderr  non_method_items.rs  non_method_items.stderr  non_trait_items.rs  non_trait_items.stderr  trait_decl_is_not_emitted_when_using_remote.rs  trait_decl_is_not_emitted_when_using_remote.stderr  trait_decl_with_non_type_generics.rs  trait_decl_with_non_type_generics.stderr  trait_method_with_reference_to_generic_type.rs  trait_method_with_reference_to_generic_type.stderr
docs/: cloneable.md  trait-bounds.md
examples/: clone.rs  debug.rs  downcasting.rs
mockiato/: Cargo.toml
mockiato-codegen/: Cargo.toml
mockiato-codegen/src/: generate.rs  lib.rs  mockable.rs
mockiato-codegen/src/generate/: arguments.rs  arguments_matcher.rs  constant.rs  drop_impl.rs  lifetime_rewriter.rs  mock_struct.rs  trait_impl.rs
mockiato-codegen/src/parse/: method_inputs.rs  mockable_attr.rs  static_attr.rs
mockiato-doc-example/: Cargo.toml
mockiato/examples/: auto-derive.rs  clone.rs  debug.rs  default.rs  test.rs
mockiato/src/: arguments.rs  call.rs  debug.rs  expected_calls.rs  function.rs  internal.rs  lib.rs  matcher.rs  method.rs  method_call.rs  return_value.rs
mockiato/src/internal/: arguments.rs  debug.rs  expected_calls.rs  fmt.rs  matcher.rs  method.rs  method_call.rs  mod.rs  return_value.rs
mockiato/src/internal/fmt/: display.rs
mockiato/src/internal/matcher/: any.rs  mod.rs  partial_eq.rs  unordered_vec_eq.rs
mockiato/src/matcher/: mod.rs  partial_eq.rs
mockiato/tests/: any_matcher.rs  auto_derive_trait_bounds.rs  cloneable_mocks.rs  compiletest.rs  default_impl.rs  docs.rs  expectations_with_references_work.rs  hand_generated.rs  hashmap.rs  method_decls.rs  panic_with_no_expected_calls.rs  return_values_with_references_work.rs  static_attr.rs  test.rs  unordered_vec.rs  unsafe_traits_work.rs  visibility.rs  works_with_dead_code_lint.rs
mockiato/tests/ui/: const-method.rs  const-method.stderr  const_method.stderr  ignored-arguments.stderr  ignored_arguments.stderr  malformed-mockable-attr.stderr  malformed_mockable_attr.rs  malformed_mockable_attr.stderr  malformed_name_attr.rs  malformed_static_attr.rs  malformed_static_attr.stderr  method-without-self.rs  method-without-self.stderr  non-trait-items.rs  non_method_items.rs  non_trait_items.rs  non_trait_items.stderr
mockiato_codegen/: Cargo.toml
mockiato_codegen/src/: constant.rs  context.rs  definition_id.rs  derive_resolver.rs  lib.rs  mockable.rs  mocked_trait_registry.rs  path_resolver.rs  result.rs  spanned.rs  trait_bound_resolver.rs
mockiato_codegen/src/definition_id/: mod.rs  predictor.rs  resolver.rs
mockiato_codegen/src/generate/: argument_matcher.rs  arguments.rs  arguments_matcher.rs  bound_lifetimes.rs  constant.rs  derive_attr.rs  drop_impl.rs  lifetime_rewriter.rs  mock_struct.rs  mod.rs  trait_impl.rs
mockiato_codegen/src/parse/: derive_attr.rs  method_decl.rs  method_inputs.rs  mockable_attr.rs  mod.rs  name_attr.rs  trait_bounds.rs  trait_decl.rs
mockiato_codegen/tests/: auto-derive-trait-bounds.rs  compiletest.rs  does-not-generate-empty-trait-list.rs  method-decls.rs  unsafe-traits-work.rs
mockiato_codegen/tests/ui/: const-method.stderr  ignored-arguments.rs  malformed-derive-attr.rs  malformed-derive-attr.stderr  malformed-mockable-attr.rs  malformed-mockable-attr.stderr  malformed-name-attr.rs  malformed-name-attr.stderr  method-without-self.stderr  non-method-items.rs  non-method-items.stderr  non-trait-items.stderr  trait-bound-not-derivable.rs  trait-bound-not-derivable.stderr
mockiato_doc_example/: Cargo.toml
src/: arguments.rs  default_return_value.rs  expected_calls.rs  fmt.rs  internal.rs  lib.rs  matcher.rs  method.rs  method_call.rs  return_value.rs
tests/: ambiguous_call.rs  any_matcher.rs  auto_derive_trait_bounds.rs  cloneable_mocks.rs  debug_bound_with_generic_type.rs  debug_impl_for_partial_eq_matcher.rs  default.rs  display_impl_for_partial_eq_matcher.rs  expectations_with_references_work.rs  generic_types.rs  hashmap.rs  non_static_references_work.rs  panic_with_no_expected_calls.rs  readme-example.rs  remote_trait.rs  remote_trait_with_path.rs  remote_trait_without_path.rs  (+12 more)
(+32 files in other folders)
