[package]
name = "mockiato"
description = "A strict, yet friendly mocking library for Rust 2018"
version = "0.9.5"
authors = [
    "Ruben Schmidmeister <ruben@myelin.ch>",
    "Jeremy Stucki <jeremy@myelin.ch>",
    "Jan Nils Ferner <jan@myelin.ch>",
]
repository = "https://github.com/mockiato/mockiato"
readme = "readme.md"
homepage = "https://github.com/mockiato/mockiato"
documentation = "https://docs.rs/mockiato"
edition = "2018"
license = "MIT"
keywords = ["test", "testing", "mock", "mocking"]
categories = ["development-tools::testing"]

[dependencies]
mockiato-codegen = { path = "crates/mockiato-codegen", version = "0.9.5" }
nearly_eq = "0.2.4"
nameof = "1.1.0"

[build-dependencies]
rustc_version = "0.2.3"

[[example]]
name = "downcasting"
test = true

[workspace]
members = [
    "crates/mockiato-codegen",
    "crates/mockiato-doc-example",
    "crates/mockiato-compiletest",
]
