[package]
name = "mockiato-codegen"
description = "Internally used by mockiato for code generation. This crate should never be used directly"
version = "0.1.0"
authors = [
    "Jan Nils Ferner <jan@myelin.ch>",
    "Ruben Schmidmeister <ruben@myelin.ch>",
    "Jeremy Stucki <jeremy@myelin.ch>",
]
edition = "2018"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "0.6"
heck = "0.3"

[dependencies.syn]
version = "0.15"
features = ["full", "extra-traits", "visit-mut"]

[dependencies.proc-macro2]
version = "0.4"
features = ["nightly"]
