[package]
name = "mockiato"
description = "Minimalistic mocking framework, ready for Rust 2018! 🎉"
version = "0.1.1"
authors = [
    "Jan Nils Ferner <jan@myelin.ch>",
    "Ruben Schmidmeister <ruben@myelin.ch>",
    "Jeremy Stucki <jeremy@myelin.ch>",
]
repository = "https://github.com/myelin-ai/mockiato"
homepage = "https://github.com/myelin-ai/mockiato"
documentation = "https://docs.rs/mockiato"
edition = "2018"
license = "MIT"
keywords = [ "test", "mock" ]

[dependencies]
mockiato-codegen = { path = "../mockiato-codegen", version = "0.1.1" }

[dev-dependencies]
compiletest_rs = "0.3.14"
