[package]
name = "mockiato_codegen"
version = "0.1.0"
authors = [
    "Ruben Schmidmeister <ruben@myelin.ch>",
    "Jeremy Stucki <jeremy@myelin.ch>",
]
edition = "2018"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "0.6"

[dependencies.syn]
version = "0.15"
features = ["full", "extra-traits"]

[dependencies.proc-macro2]
version = "0.4"
features = ["nightly"]

[dev-dependencies]
compiletest_rs = "0.3.14"
