[package]
name = "mockiato-codegen"
description = "Internally used by mockiato for code generation. This crate should never be used directly"
version = "0.5.1"
authors = [
    "Jan Nils Ferner <jan@myelin.ch>",
    "Ruben Schmidmeister <ruben@myelin.ch>",
    "Jeremy Stucki <jeremy@myelin.ch>",
]
repository = "https://github.com/myelin-ai/mockiato"
homepage = "https://github.com/myelin-ai/mockiato"
documentation = "https://docs.rs/mockiato-codegen"
edition = "2018"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "0.6.12"
heck = "0.3"

[dependencies.syn]
version = "0.15.32"
features = ["full", "visit", "visit-mut"]

[dependencies.proc-macro2]
version = "0.4.27"
features = ["nightly"]

[features]
debug-impls = ["syn/extra-traits"]
