[package]
name = "mockiato-codegen"
description = "Internally used by mockiato for code generation. This crate should never be used directly"
version = "0.9.4"
authors = [
    "Ruben Schmidmeister <ruben@myelin.ch>",
    "Jeremy Stucki <jeremy@myelin.ch>",
    "Jan Nils Ferner <jan@myelin.ch>",
]
repository = "https://github.com/mockiato/mockiato"
homepage = "https://github.com/mockiato/mockiato"
documentation = "https://docs.rs/mockiato-codegen"
edition = "2018"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
heck = "0.3.1"

[dev-dependencies]
mockiato = { path = "../.." }

[build-dependencies]
rustc_version = "0.2.3"

[dependencies.syn]
version = "1.0"
features = ["full", "visit", "visit-mut"]

[dependencies.proc-macro2]
version = "1.0"
features = ["nightly"]

[features]
debug-impls = ["syn/extra-traits"]
