[package]
name = "mockiato-compiletest"
description = "Compilation tests for mockiato"
version = "0.1.0"
authors = [
    "Jan Nils Ferner <jan@myelin.ch>",
    "Ruben Schmidmeister <ruben@myelin.ch>",
    "Jeremy Stucki <jeremy@myelin.ch>",
]
edition = "2018"
license = "MIT"

[dependencies]
mockiato = { path = "../.." }

[dev-dependencies]
compiletest_rs = "0.3.14"
