[package]
name = "mockiato-compiletest"
description = "Compilation tests for mockiato"
version = "0.1.0"
authors = [
    "Ruben Schmidmeister <ruben@myelin.ch>",
    "Jeremy Stucki <jeremy@myelin.ch>",
    "Jan Nils Ferner <jan@myelin.ch>",
]
edition = "2018"
license = "MIT"

[dev-dependencies]
trybuild = "1.0"
mockiato = { path = "../.." }
