[package]
name = "mockiato-compiletest"
description = "Compilation tests for mockiato"
version = "0.1.0"
authors = [
    "Ruben Schmidmeister <ruben@myelin.ch>",
    "Jeremy Stucki <jeremy@myelin.ch>",
    "Jan Nils Ferner <jan@myelin.ch>",
]
edition = "2018"
license = "MIT"
publish = false

[dev-dependencies]
trybuild = "1.0"
mockiato = { path = "../.." }

[build-dependencies]
rustc_version = "0.2.3"
